--- a/HR/.classpath
+++ b/HR/.classpath
@@ -14,6 +14,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/LENOVO/Downloads/eclipse/mysql-connector-java-8.0.11.jar"/>
+	<classpathentry kind="lib" path="/home/demetre/Desktop/eclipse-jee-2019-03-R-linux-gtk-x86_64 (1)/apache-tomcat-9.0.19/lib/mysql-connector-java-8.0.14.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
