vacancy add and vacancy edit

--- a/HR/.classpath
+++ b/HR/.classpath
@@ -15,5 +15,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="/home/demetre/Desktop/eclipse-jee-2019-03-R-linux-gtk-x86_64 (1)/apache-tomcat-9.0.19/lib/mysql-connector-java-8.0.14.jar"/>
+	<classpathentry kind="lib" path="/home/demetre/Desktop/json-20180813.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
